--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Johnny",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
